# photoholmes

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CVPR_NOTES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-merge.yml
examples/: cli_to_run_benchmarks_on_methods.py
notebooks/: benchmarking_a_method.ipynb
src/photoholmes/: benchmark.py
src/photoholmes/cli/: README.md  adapt_weights.py  download_weights.py  main.py  run.py  run_all.py
src/photoholmes/datasets/: README.md  __init__.py  autosplice.py  base.py  casia1.py  columbia.py  columbia_webp.py  coverage.py  dso1.py  factory.py  osn.py  realistic_tampering.py  realistic_tampering_webp.py  registry.py  trace.py
src/photoholmes/methods/: README.md  __init__.py  base.py  factory.py  registry.py
src/photoholmes/methods/adaptive_cfa_net/: README.md  __init__.py  config.py  config.yaml  method.py  preprocessing.py
src/photoholmes/metrics/: F1_weighted_v1.py  F1_weighted_v2.py  FPR.py  IoU_weighted_v1.py  IoU_weighted_v2.py  MCC_weighted_v1.py  MCC_weighted_v2.py  README.md  __init__.py  custom_metrics.md  factory.py  mAuroc.py  registry.py  torchmetrics_wrappers.py
src/photoholmes/postprocessing/: device.py  image.py  resizing.py
src/photoholmes/preprocessing/: README.md  __init__.py  base.py  image.py  pipeline.py
src/photoholmes/utils/: generic.py  image.py  patched_image.py  pca.py
tests/: test_procedure.md
tests/preprocessing/: test_image_preprocessing.py
tests/utils/: test_image.py  test_mixtures.py  test_patched_image.py  test_pca.py
(+78 files in other folders)
